<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddedDoctorCongratulationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/_35sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_140sdp"
            android:src="@drawable/ic_login_image"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/TextLabelDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/congratulations"
            android:textColor="#23384D"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogin" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/you_have_added_your_doctor"
            android:textColor="#23384D"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <TextView
            android:id="@+id/tvDone"
            style="@style/TextLabelDefault"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_colorfill_button"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:text="@string/do_you_want_to_add_more_doctors"
            android:textColor="#23384D"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@+id/tvGetStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvGetStart"
            style="@style/TextLabelDefault"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/rounded_colorfill_button"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/add_doctor"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>