<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ChooseLoginType">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clClinic"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/rectangle_box_rounded_corner"
        app:layout_constraintBottom_toTopOf="@+id/clDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextInputDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/join_as_a"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/clinic"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/activityChooseLoginType"
            style="@style/TextLabelDefault"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/rounded_colorfill_button"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/choose"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDoctor"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/rectangle_box_rounded_corner"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clClinic">

        <TextView
            android:id="@+id/tvJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/join_as_a"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/doctor"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJoin" />

        <TextView
            android:id="@+id/tvDrChoose"
            style="@style/TextLabelDefault"
            android:layout_width="@dimen/_84sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/rounded_colorfill_button"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/choose"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDoctor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_156sdp"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintBottom_toTopOf="@+id/clClinic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clClinic"
        app:srcCompat="@drawable/ic_clinic" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_156sdp"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintBottom_toTopOf="@+id/clDoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clDoctor"
        app:srcCompat="@drawable/ic_objects" />
</androidx.constraintlayout.widget.ConstraintLayout>